# rozetka-click

./: .gitignore  docker-compose.yml  run.pyw
gui_app/: api_client.py  main.py  pyproject.toml
parser/: api_documentation.md  init.sql  pyproject.toml
parser/alembic/: env.py
parser/alembic/versions/: 15e4c4c4f13c_category_update.py  220f14ec5161_proxy_update.py  64b8c4b8efa6_add_parser_status_table.py  bc7c6ba87a38_.py
parser/src/: __main__.py  config.py  controller.py  local_proxy.py  proxy.py  task.py
parser/src/database/: models.py  repository.py  session.py
parser/src/parser/: context.py  exceptions.py  scraper.py
