[project]
name = "rozetka-click"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[tool.basedpyright]
reportUnusedCallResult = false
reportExplicitAny = false
reportAny = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
include = ["src"]
